# discord-accountability-partners

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
res/: tasks.json  users.json
res/rewards/: 0.json  2.json
res/tasks/: 0.json  2.json
res/users/: 0  0.json  2
secure/: secrets.json
src/: main.rs
