[package]
name = "discord-luh-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
aes-gcm = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-persist = "0.36.0"
shuttle-secrets = "0.36.0"
shuttle-serenity = "0.36.0"
shuttle-runtime = "0.36.0"

