[package]
name = "discord-accountability-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.12.4", default-features = false, features = ["client", "builder", "gateway", "model", "rustls_backend"] }
async-std = { version = "1.12.0", features = ["std"] }
once_cell = { version = "1.13.0" }
securestore = "0.100.0"
